Finish styling user auth

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -22,6 +22,12 @@ header {
   box-sizing: border-box;
   justify-content: space-between;
   align-items: center;
-  border-bottom: 1px solid rgba(0,0,0,0.15);
+  border-bottom: 1px solid rgba(0,0,0,0.65);
   min-height: 63px;
+}
+
+::placeholder {
+  color: #aaaaaa;
+  font-family: sans-serif;
+  font-weight: lighter;
 }
