--- a/app/assets/stylesheets/api/users.scss
+++ b/app/assets/stylesheets/api/users.scss
@@ -1,3 +1,105 @@
 // Place all the styles related to the Users controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.user-show {
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  background-color: #F1EFEA;
+  width: 100vw;
+  box-sizing: border-box;
+}
+
+.user-photo-username {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  flex-direction: column;
+  padding: 20px;
+  height: 400px;
+  width: 300px;
+  background-color: white;
+  margin-right: 10px;
+
+  div {
+    background-color: gray;
+    border-radius: 300px;
+    height: 260px;
+    width: 260px;
+    margin: 0 auto;
+  }
+
+  .user-name {
+    text-align: center;
+    font-weight: bold;
+    font-family: Lato, "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+    font-size: 200%;
+    color: #25364D;
+  }
+  .user-username {
+    text-align: center;
+    font-weight: bold;
+    font-family: Lato, "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+    font-size: 140%;
+    color: #25364D;
+    font-style: italic;
+  }
+}
+
+.user-right-side {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  width: 100%;
+  max-width: 1100px;
+  padding-top: 17px;
+
+  .user-info {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    padding: 20px;
+    height: 100px;
+    width: 96%;
+    max-width: 1100px;
+    background-color: white;
+    margin-bottom: 20px;
+  }
+
+  .user-hosting {
+    width: 96%;
+    margin-right: 20px;
+    font-size: 200%;
+    font-weight: bold;
+    font-family: Lato, "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+  }
+
+  .user-reviews {
+    display: flex;
+    align-items: flex-start;
+    justify-content: flex-start;
+    padding: 20px;
+    margin-top: -10px;
+    height: 330px;
+    width: 96%;
+    background-color: white;
+
+  }
+
+  .user-review {
+    width: 90%;
+    margin-right: 20px;
+    font-size: 200%;
+    font-weight: bold;
+    font-family: Lato, "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+  }
+
+  .red {
+    color: #D81C34;
+  }
+
+  .green {
+    color: #00C168;
+  }
+}
