--- a/app/assets/stylesheets/api/stars.scss
+++ b/app/assets/stylesheets/api/stars.scss
@@ -48,3 +48,104 @@
   height: 175px;
   width: 175px;
 }
+
+.star-show {
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  flex-direction: column;
+  background-color: #F1EFEA;
+  width: 100vw;
+  box-sizing: border-box;
+}
+
+.star-photo-name {
+  display: flex;
+  justify-content: flex-start;
+  flex-direction: column;
+  height: 200px;
+  width: 100%;
+  background-color: white;
+  margin: 0 auto;
+
+  img {
+    position: relative;
+    height: 100%;
+    width: 100%;
+    margin: 0 auto;
+  }
+
+  .star-name {
+    text-align: left;
+    position: absolute;
+    font-weight: bold;
+    font-family: Lato, "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+    font-size: 400%;
+    color: white;
+    padding: 65px 20px;
+    letter-spacing: 10px;
+    font-weight: lighter;
+    margin: 0 auto;
+  }
+}
+
+.star-bottom-side {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  width: 100%;
+  height: 600px;
+  margin-top: 10px;
+  margin-right: 20px;
+  padding-right: 20px;
+  padding-bottom: 20px;
+  box-sizing: border-box;
+
+  .star-info {
+    text-align: center;
+    margin-right: 20px;
+    margin-left: 20px;
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+    padding: 20px 0px;
+    height: 100%;
+    width: 33.3333%;
+    max-width: 1100px;
+    background-color: white;
+
+    li {
+    }
+  }
+
+  .star-planets {
+    width: 100%;
+    font-size: 200%;
+    font-weight: bold;
+    font-family: Lato, "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+    border-bottom: 1px solid #E6E6E6;
+
+  }
+
+  .star-hosts {
+    text-align: center;
+    display: flex;
+    align-items: flex-start;
+    justify-content: flex-start;
+    padding-top: 20px;
+    height: 100%;
+    width: 66.6666%;
+    background-color: white;
+
+    li {
+      border-bottom: 1px solid #E6E6E6;
+    }
+  }
+
+  .star-host {
+    width: 100%;
+    font-size: 200%;
+    font-weight: bold;
+    font-family: Lato, "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+  }
+}
