--- a/app/assets/stylesheets/api/stars.scss
+++ b/app/assets/stylesheets/api/stars.scss
@@ -108,6 +108,7 @@
     display: flex;
     justify-content: flex-start;
     align-items: flex-start;
+    flex-direction: column;
     padding: 20px 0px;
     height: 100%;
     width: 33.3333%;
@@ -132,6 +133,7 @@
     display: flex;
     align-items: flex-start;
     justify-content: flex-start;
+    flex-direction: column;
     padding-top: 20px;
     height: 100%;
     width: 66.6666%;
@@ -145,6 +147,29 @@
   .star-host {
     width: 100%;
     font-size: 200%;
+    font-weight: bold;
+    font-family: Lato, "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+  }
+
+  .user-username {
+    font-size: 200%;
+    font-weight: bold;
+    font-family: Lato, "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+  }
+}
+
+.map-container {
+  width: 100%;
+  height: 90%;
+  padding: 20px;
+}
+
+.map-div {
+  width: 100%;
+  height: 100%;
+
+  span {
+    font-size: 170%;
     font-weight: bold;
     font-family: Lato, "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
   }
