--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -31,3 +31,9 @@ header {
   font-family: sans-serif;
   font-weight: lighter;
 }
+
+#map {
+  width: 100%;
+  height: 100%;
+  border: 2px solid black;
+}
