--- a/app/assets/stylesheets/api/stars.scss
+++ b/app/assets/stylesheets/api/stars.scss
@@ -34,7 +34,9 @@
   font-family: Lato, "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
   text-align: center;
   color: white;
-  font-size: 150%;
+  word-wrap: break-word;
+  text-overflow: ellipsis;
+  font-size: 140%;
   text-shadow: 1px 2px 2px rgba(150, 150, 150, 1);
   line-height:175px;
   -webkit-box-shadow: 3px 3px 5px 0px rgba(0,0,0,0.75);
@@ -155,10 +157,29 @@
     border-bottom: 1px solid #E6E6E6;
   }
 
-  .user-username {
-    font-size: 200%;
+  .users {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-wrap: wrap;
+    width: 100%;
+  }
+
+  .user {
+    font-size: 130%;
     font-weight: bold;
     font-family: Lato, "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+    height: 150px;
+    width: 150px;
+    border: 1px solid black;
+    margin: 20px;
+  }
+
+  .user-img {
+    // position: relative;
+    // height: 100%;
+    // width: 100%;
+    // margin: 0 auto;
   }
 }
 
