--- a/app/assets/stylesheets/api/stars.scss
+++ b/app/assets/stylesheets/api/stars.scss
@@ -3,9 +3,11 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 .stars-index {
+  background-color: #F1EFEA;
+  min-height: 430px;
   h2 {
     text-align: center;
-    font-size: 300%;
+    font-size: 250%;
     color: #35485E;
     text-decoration: none;
     font-family: Lato, "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
@@ -65,7 +67,7 @@
   display: flex;
   justify-content: flex-start;
   flex-direction: column;
-  height: 200px;
+  height: 167px;
   width: 100%;
   background-color: white;
   margin: 0 auto;
@@ -84,7 +86,7 @@
     font-family: Lato, "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
     font-size: 400%;
     color: white;
-    padding: 65px 20px;
+    padding: 42px 20px;
     letter-spacing: 10px;
     font-weight: lighter;
     margin: 0 auto;
@@ -113,7 +115,7 @@
     flex-direction: column;
     padding: 20px 0px;
     height: 100%;
-    width: 33.3333%;
+    width: 40%;
     max-width: 1100px;
     background-color: white;
 
@@ -131,7 +133,7 @@
   .star-planets {
     padding-top: 10px;
     width: 100%;
-    font-size: 165%;
+    font-size: 135%;
     font-weight: bold;
     font-family: Lato, "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
 
@@ -145,7 +147,7 @@
     flex-direction: column;
     padding-top: 20px;
     height: 100%;
-    width: 66.6666%;
+    width: 60%;
     background-color: white;
   }
 
@@ -169,10 +171,11 @@
     font-size: 130%;
     font-weight: bold;
     font-family: Lato, "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
-    height: 150px;
-    width: 150px;
+    height: 100px;
+    width: 100px;
     border: 1px solid black;
-    margin: 20px;
+    border-radius: 100px;
+    margin: 10px;
   }
 
   .user-img {
@@ -185,8 +188,9 @@
 
 .map-container {
   width: 100%;
-  height: 90%;
-  padding: 20px;
+  height: 82%;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
 .map-div {
@@ -194,7 +198,7 @@
   height: 100%;
 
   span {
-    font-size: 170%;
+    font-size: 135%;
     font-weight: bold;
     font-family: Lato, "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
   }
