Add styling on user images

--- a/app/assets/stylesheets/api/users.scss
+++ b/app/assets/stylesheets/api/users.scss
@@ -12,6 +12,10 @@
   min-height: 640px;
 }
 
+.user-show-img {
+  border-radius: 300px;
+}
+
 .user-photo-username {
   display: flex;
   align-items: center;
