--- a/app/assets/stylesheets/api/stars.scss
+++ b/app/assets/stylesheets/api/stars.scss
@@ -170,20 +170,22 @@
   }
 
   .user {
-    font-size: 130%;
+    font-size: 110%;
     font-weight: bold;
     font-family: Lato, "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
     height: 100px;
     width: 100px;
+    word-wrap: break-word;
     margin: 10px;
-    margin-bottom: 25px;
+    margin-bottom: 40px;
   }
 
-  .user-img {
+  .user-index-img {
     position: relative;
     height: 100%;
     width: 100%;
     background-size: cover;
+    border-radius: 200px;
   }
 }
 
