--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -27,10 +27,10 @@ header {
   min-height: 63px;
 }
 
-.user-img {
+.header-photo {
   position: relative;
-  height: 100%;
-  width: 100%;
+  height: 40px;
+  width: 40px;
   background-size: cover;
   border-radius: 200px;
 }
@@ -53,7 +53,7 @@ header {
   height: 34px;
   width: 34px;
   padding: 24px;
-  background-image: url('Github.png');
+  background-image: image-url('Github.png');
   background-size: 34px 34px;
   background-repeat: no-repeat;
   background-position: 50% 50%;
@@ -64,7 +64,7 @@ header {
   height: 34px;
   width: 34px;
   padding: 24px;
-  background-image: url('Linkedin.png');
+  background-image: image-url('Linkedin.png');
   background-size: 34px 34px;
   background-repeat: no-repeat;
   background-position: 50% 50%;
@@ -81,4 +81,17 @@ header {
   width: 100%;
   height: 100%;
   border: 2px solid black;
+}
+
+.dropdown {
+    display: inline-block;
+}
+
+.dropdown__content {
+    display: none;
+    position: absolute;
+}
+
+.dropdown--active .dropdown__content {
+    display: block;
 }
