--- a/app/assets/stylesheets/api/users.scss
+++ b/app/assets/stylesheets/api/users.scss
@@ -9,7 +9,8 @@
   background-color: #F1EFEA;
   width: 100vw;
   box-sizing: border-box;
-  min-height: 640px;
+  min-height: 780px;
+  height: 100%;
 }
 
 .user-show-img {
