--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -35,7 +35,19 @@ header {
   border-radius: 200px;
 }
 
+html {
+    position: relative;
+    min-height: 100%;
+}
+body {
+}
+
 .footer {
+  width: 100%;
+  height: 150px;
+  background: #3167b1;
+  position: absolute;
+  bottom: 0px; left: 0;
   background-color: white;
   display: flex;
   width: 100%;
