--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,6 +15,12 @@
  *= require_self
  */
 
+.header-logo {
+  color: #EF631C;
+  font-size: 200%;
+  font-family: 'Cookie', cursive;
+}
+
 header {
   background-color: white;
   display: flex;
@@ -33,13 +39,12 @@ header {
   width: 40px;
   background-size: cover;
   border-radius: 200px;
+  cursor: pointer;
 }
 
 html {
     position: relative;
     min-height: 100%;
-}
-body {
 }
 
 .footer {
@@ -112,14 +117,40 @@ body {
 }
 
 .dropdown {
-    display: inline-block;
-}
+  background-color: white;
+  border: 1px solid rgba(0,0,0,0.15);
+  position: absolute;
+  top: 56px;
+  width: 180px;
+  z-index: 5;
+  border-radius: 5px;
+  box-shadow: 0px 2px 6px rgba(0,0,0,0.1);
+  right: 10px;
+  cursor: pointer;
 
-.dropdown__content {
-    display: none;
-    position: absolute;
-}
-
-.dropdown--active .dropdown__content {
+  button {
+    padding: 20px;
     display: block;
+    font-size: 130%;
+    font-family: Lato, "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+    text-decoration: none;
+    width: 100%;
+
+    &:hover {
+      color: #ed6504;
+      background-color: #f2f2f2;
+      cursor: pointer;
+    }
+  }
+}
+
+.dropdown-toggle i {
+  cursor: pointer;
+  position: absolute;
+  top: 40px;
+  right: 5px;
+}
+
+.hidden {
+  display: none;
 }
