--- a/app/assets/stylesheets/api/users.scss
+++ b/app/assets/stylesheets/api/users.scss
@@ -107,11 +107,31 @@
     display: flex;
     align-items: flex-start;
     justify-content: flex-start;
-    padding: 20px;
+    flex-direction: column;
+    padding: 15px;
     margin-top: 10px;
-    height: 330px;
+    height: 100%;
     width: 96%;
     background-color: white;
+  }
+
+  .user-reviews-top {
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-around;
+    height: 40px;
+    width: 100%;
+    background-color: white;
+  }
+
+  .user-reviews-bottom {
+    display: flex;
+    align-items: flex-end;
+    justify-content: flex-end;
+    height: 330px;
+    width: 100%;
+    background-color: white;
+    margin-right: 90px;
   }
 
 
@@ -121,6 +141,97 @@
     font-size: 130%;
     font-weight: bold;
     font-family: Lato, "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+
+  }
+
+  .review-form {
+    display: flex;
+    font-size: 20px;
+    line-height: 1.2;
+    color: #34495e;
+    margin: 0 0 0.75em 0;
+    font-weight: bold;
+    font-family: Lato, "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+    margin-right: 50px;
+    margin-top: -30px;
+    text-align: left;
+
+    .review-submit {
+      background-color: #287fb8;
+      min-width: 160px;
+      color: white;
+      border-radius: 3px;
+      padding: 8px 12px;
+      text-align: center;
+      font-size: 15px;
+      line-height: 1.5;
+      text-decoration: none;
+      font-family: Lato, "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+      border: 1px solid #287fb8;
+      width: 50%;
+
+      &:hover {
+        background-color: #2371a3;
+        border: 1px solid #2371a3;
+      }
+    }
+
+    .review-cancel {
+      display: inline-block;
+      padding: 8px 12px;
+      text-align: center;
+      font-size: 15px;
+      line-height: 1.5;
+      text-decoration: none;
+      font-family: Lato, "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+      background-color: #FF0000;
+      min-width: 160px;
+      color: white;
+      border-radius: 3px;
+      border: 1px solid #FF0000;
+      width: 50%;
+      max-height: 40px;
+
+      &:hover {
+        background-color: #ad0000;
+        border: 1px solid #ad0000;
+      }
+    }
+
+    input {
+      padding: 12px 8px;
+      border-radius: 4px;
+      background-color: white;
+      border: 1px solid rgba(0,0,0,0.15);
+    }
+
+    textarea {
+      padding: 12px 8px;
+      border-radius: 4px;
+      background-color: white;
+      border: 1px solid rgba(0,0,0,0.15);
+    }
+  }
+
+
+  .user-review-link {
+    border-radius: 3px;
+    padding: 8px 8px;
+    margin-left: 10px;
+    text-align: center;
+    font-size: 14px;
+    line-height: 1.5;
+    text-decoration: none;
+    font-family: Lato, "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+    border: 1px solid #287fb8;
+    background-color: #287fb8;
+    min-width: 120px;
+    color: white;
+    transition: background-color 0.3s ease, border-color 0.3s ease;
+    &:hover {
+      background-color: #2371a3;
+      border: 1px solid #2371a3;
+    }
   }
 
   .red {
