--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -51,7 +51,7 @@ html {
   width: 100%;
   height: 150px;
   background: #3167b1;
-  position: absolute;
+  position: fixed;
   bottom: 0px; left: 0;
   background-color: white;
   display: flex;
