Fix showing requests on other users pages

--- a/app/assets/stylesheets/api/reviews.scss
+++ b/app/assets/stylesheets/api/reviews.scss
@@ -191,6 +191,7 @@
   font-size: 130%;
   font-weight: bold;
   font-family: Lato, "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+  margin-right: 120px;
 }
 
 .review-form {
