--- a/app/assets/stylesheets/api/stars.scss
+++ b/app/assets/stylesheets/api/stars.scss
@@ -187,9 +187,12 @@
   }
 
   .user-index-img {
+    margin-left: 15px;
     position: relative;
-    height: 100%;
-    width: 100%;
+    height: 80px;
+    width: 80px;
+    object-fit: cover;
+    background-position: center;
     background-size: cover;
     border-radius: 200px;
   }
