--- a/app/assets/stylesheets/api/stars.scss
+++ b/app/assets/stylesheets/api/stars.scss
@@ -139,9 +139,9 @@
   flex-direction: row;
   justify-content: center;
   width: 100%;
-  height: 600px;
+  height: auto;
+  max-height: 1050px;
   margin-top: 10px;
-  padding-bottom: 20px;
   box-sizing: border-box;
 
   .star-info {
@@ -153,11 +153,12 @@
     align-items: flex-start;
     flex-direction: column;
     padding: 20px 0px;
-    height: 100%;
+    height: 80%;
     width: 40%;
+    min-height: 500px;
     max-width: 1100px;
     background-color: white;
-
+    margin-bottom: 140px;
   }
 
   .star-info-title {
@@ -185,15 +186,34 @@
     justify-content: flex-start;
     flex-direction: column;
     padding-top: 20px;
-    height: 100%;
+    height: 90%;
     width: 60%;
     background-color: white;
     margin-right: 30px;
+    margin-bottom: 90px;
   }
 
   .star-host {
     width: 100%;
     font-size: 200%;
+    font-weight: bold;
+    font-family: Lato, "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+    border-bottom: 1px solid #E6E6E6;
+  }
+
+  .star-non-host {
+    margin-top: -25px;
+    width: 100%;
+    font-size: 200%;
+    font-weight: bold;
+    font-family: Lato, "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+    border-bottom: 1px solid #E6E6E6;
+  }
+
+  .star-host-section {
+    margin-top: 20px;
+    width: 100%;
+    font-size: 150%;
     font-weight: bold;
     font-family: Lato, "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
     border-bottom: 1px solid #E6E6E6;
